Corrected css footer align-content to align-items

--- a/css/main.css
+++ b/css/main.css
@@ -128,7 +128,7 @@ footer {
 .footer-content-wrapper {
   display: flex;
   justify-content: space-around;
-  align-content: center;
+  align-items: center;
 }
 
 .contact-wrapper {
